<resources>
    <string name="app_name" translatable="false">Eris</string>
    <string name="advanced_settings_button">Advanced Settings</string>
    <string name="returnToPrevious">Back</string>
    <string name="local_file_prompt">Add file</string>
    <string name="enter_link_prompt">Enter a link</string>
    <string name="or">or</string>
    <string name="export">Export</string>
    <string name="crf_label">CRF (Compression Rate)</string>
    <string name="info">Info</string>
    <string name="select_media_type">Select media type</string>
    <string name="crf_value">%d</string>
    <string name="width">Width (px)</string>
    <string name="height">Height (px)</string>
    <string name="by">by</string>
    <string name="no_file_selected">No File Selected</string>
    <string name="crf_info_title">CRF (Constant Rate Factor)\n</string>
    <string name="acknowledge">Okay</string>
    <string name="crf_info_body">CRF (Constant Rate Factor) is the quality setting for the x264 and x265 (hevc) as well as vpX encoders.\nFor h26X encoders this value ranges between 0 and 51. The default is 23.\nFor vpX encoders this value ranges between 0 and 63. The default is 31.\n\nhttps://slhck.info/video/2017/02/24/crf-guide.html</string>
    <string name="title_activity_main2">MainActivity2</string>
</resources>